gcc/testsuite/rust/rustc/ui/feature-gate/unknown-feature.rs
#![feature(unknown_rust_feature)] // { dg-error ".E0635." "" { target *-*-* } }

fn main() {}

